# rust_sindexer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  supply-chain.yml
.rust_sindexer/: index-manifest.json  index-status.json
.sindexer/: index-manifest.json  index-status.json
docs/: embedding-analysis.md  milvus-api.md  splitter-analysis.md  walker-analysis.md
src/: api.rs  config.rs  lib.rs  main.rs  transport.rs  types.rs
src/embedding/: mod.rs
src/lexical/: mod.rs
src/mcp/: hybrid.rs  indexer.rs  manifest.rs  mod.rs  searcher.rs  state.rs  tools.rs
src/splitter/: extractor.rs  mod.rs  node_types.rs  parsers.rs  refine.rs
src/vectordb/: client.rs  local.rs  mod.rs  types.rs
src/walker/: mod.rs
tasks/: phase1_search_core.yaml  phase2_hybrid_incremental.yaml  phase3_bm25_lexical.yaml  phase4_breadth.yaml
tests/: hybrid_search_test.rs  index_manifest_test.rs  splitter_test.rs  walker_test.rs
