[package]
name = "rclaude-context"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
rayon = "1.10"
ignore = "0.4"
tree-sitter = "0.26"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
schemars = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
