[package]
name = "rust_sindexer"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust MCP server for semantic code indexing and search"
license = "MIT"
repository = "https://github.com/RESMP-DEV/rust_sindexer"
keywords = ["mcp", "code-search", "semantic-indexing", "tree-sitter", "milvus"]
categories = ["development-tools", "text-processing"]

[dependencies]
rmcp = { version = "1.5.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
rayon = "1.10"
ignore = "0.4"
tree-sitter = "0.26"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-scala = "0.25"
tree-sitter-c-sharp = "0.23"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
schemars = "1"
tantivy = "0.22"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
